--- a/app/src/main/res/layout/activity_sound.xml
+++ b/app/src/main/res/layout/activity_sound.xml
@@ -4,7 +4,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SoundActivity"
-    android:id="@+id/videoButton">
+    android:id="@+id/background"
+    android:background="#ffffff">
 
     <SeekBar
         android:layout_width="wrap_content"
@@ -30,7 +31,7 @@
         android:layout_height="wrap_content"
         android:text="Pause"
         android:id="@+id/pauseButton"
-        android:layout_above="@+id/videoButton"
+        android:layout_below="@+id/soundSeekBar"
         android:layout_centerHorizontal="true" />
 
     <Button
@@ -38,17 +39,17 @@
         android:layout_height="wrap_content"
         android:text="Stop"
         android:id="@+id/stopButton"
-        android:layout_above="@+id/videoButton"
-        android:layout_alignRight="@+id/soundSeekBar"
-        android:layout_alignEnd="@+id/soundSeekBar" />
+        android:layout_below="@+id/soundSeekBar"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/video_button"
         android:id="@+id/videoButton"
-        android:layout_marginTop="67dp"
-        android:layout_below="@+id/playButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/pauseButton"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="62dp" />
 
 </RelativeLayout>
