--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -6,23 +6,29 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="activity.ctec.soundandvideolinking.VideoActivity"
     android:id="@+id/backgroundTwo"
-    android:background="#ffffff">
+    android:background="#010101">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Go back to the Sound"
         android:id="@+id/homeButton"
+        android:layout_marginTop="116dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="58dp" />
+        android:layout_centerHorizontal="true"/>
 
     <VideoView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/videoView"
-        android:layout_below="@+id/homeButton"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="43dp" />
+        android:layout_below="@+id/homeButton"/>
+
+    <RatingBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ratingBar"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
